--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,12 +30,13 @@
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
             "class-variance-authority": "^0.7.1",
-            "clsx": "*",
+            "clsx": "^2",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
-            "motion": "*",
+            "motion": "^12",
+            "next": "^14",
             "next-themes": "^0.4.6",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
@@ -44,19 +45,23 @@
             "react-resizable-panels": "^2.1.7",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
-            "tailwind-merge": "*",
+            "tailwind-merge": "^3",
             "vaul": "^1.1.2"
       },
       "devDependencies": {
+            "@tailwindcss/postcss": "^4",
             "@types/node": "^20.10.0",
-            "@types/react": "^19.2.13",
-            "@types/react-dom": "^19.2.3",
-            "@vitejs/plugin-react-swc": "^3.10.2",
-            "vite": "6.3.5"
+            "@types/react": "^18.3.28",
+            "@types/react-dom": "^18.3.7",
+            "eslint": "^9.39.2",
+            "eslint-config-next": "^16.1.6",
+            "tailwindcss": "^4",
+            "typescript": "^5"
       },
       "scripts": {
-            "dev": "vite",
-            "build": "vite build",
-            "vercel-deploy": "vercel env pull .env && npm run build && vercel build && vercel --prod"
+            "dev": "next dev --port 3000",
+            "build": "next build",
+            "start": "next start",
+            "lint": "next lint"
       }
 }
